--- a/index.html
+++ b/index.html
@@ -4,8 +4,160 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <h1>Example</h1>
+    <!-- Header -->
+    <header>
+      <div class="header-container">
+        <a class="logo" href="web_practice.html"
+          ><span class="web-logo">WEB</span>STUDIO</a
+        >
+        <!-- Navigation -->
+        <nav>
+          <ul class="navigation-list">
+            <li>
+              <a class="navigation-list-item" href="/">Studio</a>
+            </li>
+            <li>
+              <a class="navigation-list-item" href="/">Portfolio</a>
+            </li>
+            <li>
+              <a class="navigation-list-item" href="/">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Contacts -->
+        <address>
+          <ul class="contacts-list">
+            <li class="contacts-list-item">
+              <a
+                class="contacts-list-item-link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-list-item">
+              <a class="contacts-list-item-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+    </header>
+    <!-- Wrapper -->
+    <main>
+      <!-- First page -->
+      <div class="first-page-container">
+        <h1 class="first-page-title">
+          Effective Solutions<br />for Your Business
+        </h1>
+
+        <button class="order-button" type="button">
+          <span class="order-button-text">Order Service</span>
+        </button>
+      </div>
+      <!-- Fichi -->
+      <section>
+        <!-- Strategy -->
+        <div>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </div>
+        <!-- Punctuality -->
+        <div>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </div>
+        <!-- Diligence -->
+        <div>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
+        </div>
+        <!-- Technologies -->
+        <div>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </div>
+      </section>
+      <!-- Our Team -->
+      <section>
+        <!-- Mark Guerrero -->
+        <div>
+          <img
+            src="/images/mark-guerrero.jpg"
+            alt="Mark Guerrero Photo"
+            width="264"
+            height="260"
+          />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </div>
+        <!-- Tom Ford -->
+        <div>
+          <img
+            src="/images/tom-ford.jpg"
+            alt="Tom Ford Photo"
+            width="264"
+            height="260"
+          />
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </div>
+        <!-- Camila Garcia -->
+        <div>
+          <img
+            src="/images/camila-garcia.jpg"
+            alt="Camila Garcia Photo"
+            width="264"
+            height="260"
+          />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </div>
+        <!-- Daniel Wilson -->
+        <div>
+          <img
+            src="/images/daniel-wilson.jpg"
+            alt="Daniel Wilson Photo"
+            width="264"
+            height="260"
+          />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </div>
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer>
+      <a class="logo" href="web_practice.html"
+        ><span class="web-logo">WEB</span>STUDIO</a
+      >
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
