--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WEBSTUDIO</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
+    <!-- Wrapper -->
     <!-- Header -->
     <header>
       <div class="header-container">
@@ -54,7 +55,6 @@
         </address>
       </div>
     </header>
-    <!-- Wrapper -->
     <main>
       <!-- First page -->
       <div class="first-page-container">
@@ -67,97 +67,110 @@
         </button>
       </div>
       <!-- Fichi -->
-      <section>
+      <section class="fichi-section">
         <!-- Strategy -->
-        <div>
-          <h3>Strategy</h3>
-          <p>
+        <div class="fichi-item-container">
+          <h3 class="fichi-title">Strategy</h3>
+          <p class="fichi-text">
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
         </div>
         <!-- Punctuality -->
-        <div>
-          <h3>Punctuality</h3>
-          <p>
+        <div class="fichi-item-container">
+          <h3 class="fichi-title">Punctuality</h3>
+          <p class="fichi-text">
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
           </p>
         </div>
         <!-- Diligence -->
-        <div>
-          <h3>Diligence</h3>
-          <p>
+        <div class="fichi-item-container">
+          <h3 class="fichi-title">Diligence</h3>
+          <p class="fichi-text">
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
           </p>
         </div>
         <!-- Technologies -->
-        <div>
-          <h3>Technologies</h3>
-          <p>
+        <div class="fichi-item-container">
+          <h3 class="fichi-title">Technologies</h3>
+          <p class="fichi-text">
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
           </p>
         </div>
       </section>
       <!-- Our Team -->
-      <section>
-        <!-- Mark Guerrero -->
-        <div>
-          <img
-            src="/images/mark-guerrero.jpg"
-            alt="Mark Guerrero Photo"
-            width="264"
-            height="260"
-          />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </div>
-        <!-- Tom Ford -->
-        <div>
-          <img
-            src="/images/tom-ford.jpg"
-            alt="Tom Ford Photo"
-            width="264"
-            height="260"
-          />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </div>
-        <!-- Camila Garcia -->
-        <div>
-          <img
-            src="/images/camila-garcia.jpg"
-            alt="Camila Garcia Photo"
-            width="264"
-            height="260"
-          />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </div>
-        <!-- Daniel Wilson -->
-        <div>
-          <img
-            src="/images/daniel-wilson.jpg"
-            alt="Daniel Wilson Photo"
-            width="264"
-            height="260"
-          />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
+      <section class="our-team-section">
+        <h2 class="our-team-title">Our Team</h2>
+        <div class="our-team-container">
+          <!-- Mark Guerrero -->
+          <div class="our-team-item-container">
+            <img
+              src="/images/mark-guerrero.jpg"
+              alt="Mark Guerrero Photo"
+              width="264"
+              height="260"
+            />
+            <div class="our-team-item-content">
+              <h3 class="our-team-item-title">Mark Guerrero</h3>
+              <p class="our-team-item-text">Product Designer</p>
+            </div>
+          </div>
+          <!-- Tom Ford -->
+          <div class="our-team-item-container">
+            <img
+              src="/images/tom-ford.jpg"
+              alt="Tom Ford Photo"
+              width="264"
+              height="260"
+            />
+            <div class="our-team-item-content">
+              <h3 class="our-team-item-title">Tom Ford</h3>
+              <p class="our-team-item-text">Frontend Developer</p>
+            </div>
+          </div>
+          <!-- Camila Garcia -->
+          <div class="our-team-item-container">
+            <img
+              src="/images/camila-garcia.jpg"
+              alt="Camila Garcia Photo"
+              width="264"
+              height="260"
+            />
+            <div class="our-team-item-content">
+              <h3 class="our-team-item-title">Camila Garcia</h3>
+              <p class="our-team-item-text">Marketing</p>
+            </div>
+          </div>
+          <!-- Daniel Wilson -->
+          <div class="our-team-item-container">
+            <img
+              src="/images/daniel-wilson.jpg"
+              alt="Daniel Wilson Photo"
+              width="264"
+              height="260"
+            />
+            <div class="our-team-item-content">
+              <h3 class="our-team-item-title">Daniel Wilson</h3>
+              <p class="our-team-item-text">UI Designer</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
     <!-- Footer -->
     <footer>
-      <a class="logo" href="web_practice.html"
-        ><span class="web-logo">WEB</span>STUDIO</a
-      >
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="footer-container">
+        <a class="logo-footer" href="web_practice.html"
+          ><span class="web-logo">WEB</span>STUDIO</a
+        >
+        <p class="footer-content">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
