--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- Wrapper -->
     <!-- Header -->
     <header>
       <div class="header-container">
