Fix links address

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
     <!-- Header -->
     <header>
       <div class="header-container">
-        <a class="logo" href="web_practice.html"
+        <a class="logo" href="./index.html"
           ><span class="web-logo">WEB</span>STUDIO</a
         >
         <!-- Navigation -->
         <nav>
           <ul class="navigation-list">
             <li>
-              <a class="navigation-list-item" href="/">Studio</a>
+              <a class="navigation-list-item" href="./">Studio</a>
             </li>
             <li>
-              <a class="navigation-list-item" href="/">Portfolio</a>
+              <a class="navigation-list-item" href="./">Portfolio</a>
             </li>
             <li>
-              <a class="navigation-list-item" href="/">Contacts</a>
+              <a class="navigation-list-item" href="./">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -162,7 +162,7 @@
     <!-- Footer -->
     <footer>
       <div class="footer-container">
-        <a class="logo-footer" href="web_practice.html"
+        <a class="logo-footer" href="./index.html"
           ><span class="web-logo">WEB</span>STUDIO</a
         >
         <p class="footer-content">
