Fix images addresses

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <!-- Mark Guerrero -->
           <div class="our-team-item-container">
             <img
-              src="/images/mark-guerrero.jpg"
+              src="./images/mark-guerrero.jpg"
               alt="Mark Guerrero Photo"
               width="264"
               height="260"
@@ -120,7 +120,7 @@
           <!-- Tom Ford -->
           <div class="our-team-item-container">
             <img
-              src="/images/tom-ford.jpg"
+              src="./images/tom-ford.jpg"
               alt="Tom Ford Photo"
               width="264"
               height="260"
@@ -133,7 +133,7 @@
           <!-- Camila Garcia -->
           <div class="our-team-item-container">
             <img
-              src="/images/camila-garcia.jpg"
+              src="./images/camila-garcia.jpg"
               alt="Camila Garcia Photo"
               width="264"
               height="260"
@@ -146,7 +146,7 @@
           <!-- Daniel Wilson -->
           <div class="our-team-item-container">
             <img
-              src="/images/daniel-wilson.jpg"
+              src="./images/daniel-wilson.jpg"
               alt="Daniel Wilson Photo"
               width="264"
               height="260"
